# TactonLibrary

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TactonLibrary.sln
.qt_for_python/uic/: magiccircle.py
Arduino/Tacton/: Tacton.cpp  Tacton.h  keywords.txt
Arduino/TactonManager/: TactonManager.cpp  TactonManager.h  keywords.txt
Arduino/TactonPlayer/: Tacton.cpp  Tacton.h  TactonManager.cpp  TactonManager.h  TactonPlayer.cpp  TactonPlayer.h  TactonPlayerPrecise.cpp  TactonPlayerPrecise.h  TactonPlayerPreciseNew.cpp  TactonPlayerPreciseNew.h  TactonPlayerWithAmplitude.cpp  TactonPlayerWithAmplitude.h  keywords.txt
Arduino/wristbandTactons/: wristbandTactons.ino  wristbandTactons.pde
TactonDebug/: TactonDebug.sln
TactonDebug/AngleTester/: AngleTester.vcxproj  CMakeLists.txt  DMTactileDisplay.cpp  DMTactileDisplay.h  angletester.cpp  angletester.h  angletester.ui  main.cpp
TactonDebug/MagicCircle/: CMakeLists.txt  MagicCircle.vcxproj  magiccircle.cpp  magiccircle.h  magiccircle.qrc  magiccircle.ui  main.cpp
TactonDebug/TactonDebug/: CMakeLists.txt  TactonDebug.vcxproj  main.cpp  tactondebug.cpp  tactondebug.h  tactondebug.qrc  tactondebug.ui
TactonPlayer/: CMakeLists.txt  Serial.cpp  Serial.hpp  SerialWindows.cpp  SerialWindows.hpp  Tacton.cpp  Tacton.hpp  TactonPlayer.cpp  TactonPlayer.hpp  TactonPlayer.vcxproj  TactonPlayer.vcxproj.filters
